fix: fixed an issue with close button not showing on tips blocks

--- a/apps/client/src/styles.less
+++ b/apps/client/src/styles.less
@@ -50,6 +50,10 @@ h1, h2, h3, h4, h5 {
   border-color: #444 !important;
 }
 
+.ant-alert-close-text {
+  color: black !important;
+}
+
 .ant-checkbox-wrapper + .ant-checkbox-wrapper {
   margin-left: 0 !important;
 }
